[tool.pytest.ini_options]
minversion = "6.0"
# opts:
# `--dist=loadscope ` - run tests within classes in series
# `--strict-markers` - Raise error on unexpected pytest markers being used (add new markers to `markers` config)
# `-nauto` - parallelise over as many threads as possible (uses pytest-xdist). If debugging (`--pdb`), this will default to one thread.
# `--cov-report=xml --cov-config=pyproject.toml` - coverage report config for when running in tests (uses pytest-cov; call `--cov` in CLI to switch coverage on; `--cov-config` include to avoid bug)
# addopts = "-rav --dist=loadscope --strict-markers -nauto --cov-report=xml --cov-config=pyproject.toml"

testpaths = ["tests"]
markers = [
  "reference: reference regression tests (deselect with -m 'not reference')",
]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["docs", "dist"]

[tool.ruff.lint]
# Defaults (pycodestyle errors, pyflakes) plus import sorting
extend-select = ["I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gsee*"]

[tool.setuptools]
license-files = ["LICENSE"]

[project]
name = "gsee"
authors = [
  { name = "Stefan Pfenninger", email = "stefan@pfenninger.org" },
]
description="GSEE: Global Solar Energy Estimator"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
climate = ["gsee-climate-data"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "gsee._version.__version__" }

[project.urls]
repository = "https://github.com/renewables-ninja/gsee"
changelog = "https://github.com/renewables-ninja/gsee/blob/master/CHANGELOG.md"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.14"

[tool.pixi.pypi-dependencies]
gsee = { path = ".", editable = true }
gsee-climate-data = { path = "packages/gsee-climate-data" }

[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=8.3"
ruff = ">=0.8"
dask = ">=2024"
h5netcdf = ">=1.3"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
test = "pytest"
generate-reference = "python -m tests.reference.generate"
benchmark = "python benchmarks/benchmark.py"
format = "ruff format ."
lint = "ruff check ."
