[tool.pytest.ini_options]
minversion = "6.0"
# opts:
# `--dist=loadscope ` - run tests within classes in series
# `--strict-markers` - Raise error on unexpected pytest markers being used (add new markers to `markers` config)
# `-nauto` - parallelise over as many threads as possible (uses pytest-xdist). If debugging (`--pdb`), this will default to one thread.
# `--cov-report=xml --cov-config=pyproject.toml` - coverage report config for when running in tests (uses pytest-cov; call `--cov` in CLI to switch coverage on; `--cov-config` include to avoid bug)
# addopts = "-rav --dist=loadscope --strict-markers -nauto --cov-report=xml --cov-config=pyproject.toml"

testpaths = ["tests"]
markers = [
  "reference: reference regression tests (deselect with -m 'not reference')",
]

[tool.coverage.run]
source = ["gsee"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["docs", "dist"]

[tool.ruff.lint]
# Defaults (pycodestyle errors, pyflakes) plus import sorting
extend-select = ["I"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gsee*"]

[tool.setuptools]
license-files = ["LICENSE"]

[project]
name = "gsee"
authors = [
  { name = "Stefan Pfenninger", email = "stefan@pfenninger.org" },
]
description="GSEE: Global Solar Energy Estimator"
readme = "README.md"
license = { text = "BSD-3-Clause" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
climate = ["gsee-climate-data"]
legacy = ["ephem>=4.2.1"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "gsee._version.__version__" }

[project.urls]
repository = "https://github.com/renewables-ninja/gsee"
changelog = "https://github.com/renewables-ninja/gsee/blob/master/CHANGELOG.md"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.14"

[tool.pixi.pypi-dependencies]
gsee = { path = ".", editable = true }
gsee-climate-data = { path = "packages/gsee-climate-data" }

[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=8.3"
pytest-cov = ">=6"
ruff = ">=0.8"
dask = ">=2024"
h5netcdf = ">=1.3"
mkdocs = ">=1.6"
mkdocs-material = ">=9.5"
ephem = ">=4.2.1"

# The minimal environment has no ephem, proving that gsee works without
# the optional legacy dependency (gsee.legacy tests skip themselves)
[tool.pixi.feature.minimal.pypi-dependencies]
pytest = ">=8.3"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
minimal = { features = ["minimal"] }

[tool.pixi.tasks]
test = "pytest"
test-cov = "pytest --cov --cov-report=xml --cov-report=term"
generate-reference = "python -m tests.reference.generate"
benchmark = "python benchmarks/benchmark.py"
format = "ruff format ."
format-check = "ruff format --check ."
lint = "ruff check ."
docs-build = "mkdocs build --strict"
docs-serve = "mkdocs serve"
